make buttons easier to press on mobile, make sure we're building css and js for ios (the shittiest target)

--- a/js/css/button.css
+++ b/js/css/button.css
@@ -1,7 +1,7 @@
 
 button.pushbutton, a.pushbutton {
     display: block;
-    padding: 10px;
+    padding: 15px;
     margin: 10px 5px;
     overflow: visible;
     border-radius: 100px;
@@ -20,6 +20,16 @@ button.pushbutton, a.pushbutton {
         fill: white;
     }
 }
+
+/*
+button.pushbutton svg, a.pushbutton svg{
+    width: 30px;
+    height: 30px;
+}
+button.pushbutton svg path, a.pushbutton svg path{
+    fill: white;
+}
+*/
 
 
 button.pushbutton:hover, a.pushbutton:hover{
